# CST-310

./: .gitignore  README.md  anim  linux_bridge_start_command  linux_install_cplusplus_compiler.sh  linux_run_program.sh  test.cpp  uni
Misc/: HappyFace  HappyFace.cpp  HappyFace.frag  HappyFace.vs  Shader.h
Project1/: README.txt  Sierpinski Gaskett Graphic Documentation.docx  Sierpinski.cpp  Sierpinski3d.cpp  fractal2D  fractal3D
Project10/: DOCUMENTATION.docx  Mesh.h  Model.h  README.md  compile.txt  cube.frag  cube.vs  cylinder.frag  cylinder.vs  main.cpp  project10  run  skybox.frag  skybox.vs  sphere.frag  sphere.vs
Project2/: CST310-Project2.docx  README.txt  dino.cpp  uniform.cpp
Project3/: Project 3 CST-310.docx
Project4/: README.md  RLRender.cpp  example  example.cpp  rlrender
Project5/: Project5.docx  README.md  RLRender.cpp  rlrender
Project6/: Documentation.docx  README.md  specular  specular.cpp
Project7/: CUBE_README.md  CheckeredTriangles  CheckeredTriangles.cpp  ColorCubeFlyby  ColorCubeFlyby.cpp  README_CheckeredTriangles.md  notesforme_cube.txt  spin
Project8/: CMakeLists.txt  Project8  README.md  constants.h  level.cpp  level.h  main.cpp  obstacle.cpp  obstacle.h  player.cpp  player.h  renderer.cpp  renderer.h
Project9/: README.md  main.cpp  run
Week11/: main  main.cpp  sphere  sphere.cpp
Week1Tue/: README.txt  TestOpenGL.cpp  myFirstOpenGL
Week5/: 3pyramid.cpp  pyramids  wave  wave.cpp
Week8/: code  code.cpp
curtains/: Makefile  README.md  curtain  curtain.cpp
modeller/: Makefile  README.md  README_EASY.md  modeler  (+3 more)
